<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_color">

    <EditText android:id="@+id/et_accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/account_name"
        />

    <Button android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/normal_button"
        android:text="@string/create_account"
        android:textColor="@color/text_color"
        />

    <TextView android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textColor="@color/secondary_text_color"
        android:text="@string/or"
        />

    <Button android:id="@+id/btn_join_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/normal_button"
        android:text="@string/join_account"
        android:textColor="@color/text_color"
        />

</LinearLayout>