<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/aaba"/>

    </LinearLayout>


    <EditText android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:layout_below="@id/ll_top"
        android:textColor="@color/primary_text_color"
        android:hint="@string/phonenum"
        android:textColorHint="@color/secondary_text_color"
        android:inputType="phone"
        />

    <EditText android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@id/et_username"
        android:textColor="@color/primary_text_color"
        android:hint="@string/password"
        android:textColorHint="@color/secondary_text_color"
        android:inputType="textPassword"
        />

    <Button android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/normal_button"
        android:text="@string/login"
        android:textColor="@color/text_color"
        />

    <Button android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/normal_button"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        />

</RelativeLayout>