<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="10dp"
        android:background="@color/primary_color">

        <com.wt.first.CustomView.CircleHead
            android:id="@+id/takeit_my_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btn_add_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/takeit_my_head"
            android:layout_marginTop="20dp"
            android:background="@drawable/normal_button_stroke"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/click_to_add_account"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/takeit_my_head"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/text_color"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_money"
            android:layout_marginTop="10dp"
            >

            <TextView android:id="@+id/tv_jiezhang"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="结账"
                android:textColor="@color/text_color"
                android:visibility="gone"/>

            <TextView android:id="@+id/tv_quit_account"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="离开"
                android:textColor="@color/text_color"
                android:visibility="gone"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/layout_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/layout_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="账本名称"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp"/>

        <TextView android:id="@+id/tv_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="45dp"
            android:textColor="@color/secondary_text_color"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_go_gender"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />

    </RelativeLayout>

    <LinearLayout android:id="@+id/llayout_others"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@color/text_color">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/other_person_tx"
                    android:id="@+id/others_1"/>
                <include layout="@layout/other_person_tx"
                    android:id="@+id/others_2"/>
                <include layout="@layout/other_person_tx"
                    android:id="@+id/others_3"/>
                <include layout="@layout/other_person_tx"
                    android:id="@+id/others_4"/>
                <include layout="@layout/other_person_tx"
                    android:id="@+id/others_5"/>
                <include layout="@layout/other_person_tx"
                    android:id="@+id/others_6"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp"
        android:background="@color/text_color">

        <Button android:id="@+id/btn_billtype_eat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/btn_text_eat"
            android:textColor="@color/circle_button_text_color"
            android:textStyle="bold"
            android:background="@drawable/circle_button"
            />

        <Button android:id="@+id/btn_billtype_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/btn_text_play"
            android:textColor="@color/circle_button_text_color"
            android:textStyle="bold"
            android:background="@drawable/circle_button"
            />

        <Button android:id="@+id/btn_billtype_life"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/btn_text_life"
            android:textColor="@color/circle_button_text_color"
            android:textStyle="bold"
            android:background="@drawable/circle_button"
            />

        <Button android:id="@+id/btn_billtype_other"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/btn_text_other"
            android:textColor="@color/circle_button_text_color"
            android:textStyle="bold"
            android:background="@drawable/circle_button"
            />

        <Button android:id="@+id/btn_billtype_takeit"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:text="@string/btn_text_takeit"
            android:textColor="@color/circle_button_text_color"
            android:textStyle="bold"
            android:background="@drawable/circle_button"
            />

    </RelativeLayout>


</LinearLayout>